hello/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-pod
  ports:
    - name: http
      port: 8080
